<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OmniSnitch</string>
    <string name="status_bar_recent_remove_item_title">Stop</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="recents_settings_title">OmniSnitch</string>
    <string name="start_on_boot_title">Start on boot</string>
    <string name="start_on_boot_summary">Start and enable on device boot</string>
    <string name="toggle_service_title">Enable</string>
    <string name="opacity_title">Opacity</string>
    <string name="opacity_summary">Background opacity of overlay view</string>
    <string name="animate_title">Animate</string>
    <string name="animate_title_summary">Animate show and hide of overlay view</string>
    <string name="adjust_handle_title">Position</string>
    <string name="sc_drag_handle_title">Drag handle</string>
    <string name="sc_drag_handle_body">\nSwipe horizontally or long-press to open\nPress button or outside to close</string>
    <string name="sc_favorite_title">Favorite apps</string>
    <string name="sc_favorite_body">\nOpen favorite apps view.</string>
    <string name="icon_size_normal">Normal</string>
    <string name="icon_size_small">Small</string>
    <string name="icon_size_large">Large</string>
    <string name="icon_size_title">Icon size</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="drag_handle_color_title">Color</string>
    <string name="drag_handle_color_summary"></string>
    <string name="drag_handle_color_dialog_title">Color</string>
    <string name="service_background_processes"><xliff:g id="memory">%1$s</xliff:g> free</string>
    <string name="service_foreground_processes"><xliff:g id="memory">%1$s</xliff:g> used</string>
    <string name="show_rambar_title">Show memory usage</string>
    <string name="show_rambar_summary">Display amount of free and used memory</string>
    <string name="show_app_labels">Show app name</string>
    <string name="show_app_labels_summary">Application name will be displayed with the icon</string>
    <string name="category_overlay_title">Overlay</string>
    <string name="category_drag_handle_title">Drag handle</string>
    <string name="category_favorite_title">Favorites</string>
    <string name="favorite_apps_config_title">Manage favorites</string>
    <string name="favorite_apps_config_summary">Define apps shown in favorites view</string>
    <string name="favorite_apps_add_dialog_title">Add apps</string>
    <string name="favorite_add">Add\u2026</string>
    <string name="location_left" translatable="false">&lt;&lt;</string>
    <string name="location_right" translatable="false">&gt;&gt;</string>
    <string name="reset">Default</string>
    <string name="toogle_last_app_help">Switch to last app</string>
    <string name="kill_all_apps_help">Kill all apps</string>
    <string name="kill_other_apps_help">Kill other apps</string>
    <string name="settings_help">Settings</string>
    <string name="home_help">Home</string>
    <string name="toogle_last_app">Switch to last app</string>
    <string name="kill_all_apps">Kill all apps</string>
    <string name="kill_other_apps">Kill other apps</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Action buttons displayed in overlay view</string>
    <string name="auto_hide_handle">Auto-hide</string>
    <string name="auto_hide_handle_summary">Two swipes to show overlay view</string>
    <string name="no_recent_apps_title">No recent apps</string>
    <string name="adjust_handle_summary"></string>
    <string name="drag_handle_opacity_title">Opacity</string>
    <string name="drag_handle_opacity_summary"></string>
    <string name="drag_handle_enable_title">Enable</string>
    <string name="drag_handle_enable_summary">Disable only if you use another activation method</string>
</resources>