<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/recents_settings_title" >
	<SwitchPreference
		android:key="toggle_service"
		android:title="@string/toggle_service_title" />
	<CheckBoxPreference
		android:key="start_on_boot"
		android:summary="@string/start_on_boot_summary"
		android:title="@string/start_on_boot_title" />
	<PreferenceCategory
		android:key="category_overlay"
		android:title="@string/category_overlay_title" >
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="animate"
			android:summary="@string/animate_title_summary"
			android:title="@string/animate_title" />
		<ListPreference
			android:entries="@array/icon_size_entries"
			android:entryValues="@array/icon_size_values"
			android:key="icon_size"
			android:summary="@string/icon_size_normal"
			android:title="@string/icon_size_title" />
		<tk.eatheat.omnisnitch.ui.SeekBarPreference
			android:defaultValue="60"
			android:key="opacity"
			android:max="100"
			android:summary="@string/opacity_summary"
			android:title="@string/opacity_title" />
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="show_rambar"
			android:summary="@string/show_rambar_summary"
			android:title="@string/show_rambar_title" />
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="show_labels"
			android:summary="@string/show_app_labels_summary"
			android:title="@string/show_app_labels" />
		<Preference
			android:key="button_config"
			android:summary="@string/buttons_summary"
			android:title="@string/buttons_title" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="category_drag_handle"
		android:title="@string/category_drag_handle_title" >
		<Preference
			android:key="adjust_handle"
			android:title="@string/adjust_handle_title" />
		<tk.eatheat.omnisnitch.ui.DragHandleColorPreference
			android:key="drag_handle_color"
			android:title="@string/drag_handle_color_title" />
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="auto_hide_handle"
			android:summary="@string/auto_hide_handle_summary"
			android:title="@string/auto_hide_handle" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="category_favorite"
		android:title="@string/category_favorite_title" >
		<Preference
			android:key="favorite_apps_config"
			android:summary="@string/favorite_apps_config_summary"
			android:title="@string/favorite_apps_config_title" />
	</PreferenceCategory>
</PreferenceScreen>